@@ -1,4 +1,11 @@
+
+
+
 2001-07-08  John Kirkland <jpk@bl.org>
+
+	* Photo captions now automagically get set from the original
+	  filenames.  This is controlled via a checkbox in the file
+	  upload screen.  Hi, Ed!  This feature is for you!  :-)  
 
 	* Added the ability to retain original file names when uploading.  
 	  All non-alpha-numeric characters are converted to underscores.
